2.1-1
      * Some bug fixes for contrast plots with lme4 models.

2.1-0
      * Major overhaul to visreg's internal structure.  visreg now
        returns simple, structured objects that a user can modify and
        inspect prior to plotting.
      * Related to that, visreg() now separated from plot.visreg()
      * Improved formula parsing so that it now works properly for
      	te() and ti() models (mgcv), pspline models (survival), more 
	complex formulas from lme4, and more (thank you to Andrew
	Vitale for giving me a good, complex model formula to test
	against).
      * Bug fixes with strip.names: now works for factors and shingles
      	for both overlay and lattice plots (thank you to Dan Silver
	for pointing this out).

2.0-6
      * Fixed issue with S4 models not being compatible with
      	as.formula().  visreg now refrains from calling as.formula.
	Thank you to Nick Livingston for bringing this issue to my
	attention.
      * Changed defaults so that rugs are plotted instead of partial
      	residuals when a transformation has been applied.

2.0-5
      * Fixed bug arising when passing plot options such as 'xlim'
      	when used in conjunction with lme4 models.  Thank you to
	Vincent Maire for pointing this bug out.

2.0-4
      * Added compatibility with models from the 'lme4' package
      	 (Thank you to Jack Hogg for pointing out this
	 incompatibility); same limitations regarding error bands as
	 'lme' models

2.0-3
      * Added compatibility with 'lme' models; conditional models
      	 still cannot include error bands due to lack of this feature
	 in predict.lme, but the package will produce reasonable plots
	 of means and partial residuals (Thank you to Jason Rohr for 
	 pointing out this incompatibility and the bugs below)
      * Fixed bug in passing 'scales' to latticePlot
      * Fixed bug when trying to panel by every unique value of 'by'
      	 variable
      * Added option to manually relabel panel strips

2.0-2