@@ -1,11 +1,11 @@
 Package: visreg
 Title: Visualization of Regression Models
 Version: 2.1-1
-Date: 2014-02-19
+Date: 2014-02-25
 Author: Patrick Breheny, Woodrow Burchett
 Maintainer: Patrick Breheny <patrick-breheny@uiowa.edu>
 Imports: lattice
-Suggests: rgl, survival, MASS, nlme, splines
+Suggests: rgl, survival, MASS, nlme, splines, lme4
 Description: Provides a convenient interface for constructing plots to visualize the fit of regression models arising from a wide variety of models in R (lm, glm, coxph, rlm, gam, locfit, etc.)
 License: GPL-2
 URL: http://myweb.uiowa.edu/pbreheny/publications/visreg.pdf
