@@ -68,12 +68,11 @@ visreg2d <- function(fit, xvar, yvar, type=c("conditional", "contrast", "effect"
       if (length(new.args)) plot.args[names(new.args)] <- new.args
       do.call("persp", plot.args)
     } else if (plot.type=="rgl") {
-      require(rgl)
       plot.args <- list(x=x, y=y, z=z, xlab=xvar, ylab=yvar, zlab=zlab, color="gray")
       new.args <- list(...)
       if (length(new.args)) plot.args[names(new.args)] <- new.args
       if (i >= 2) rgl::open3d()
-      do.call("persp3d", plot.args)
+      do.call("rgl::persp3d", plot.args)
     }
   }
   if (print.cond) printCond(list(list(x=list(cond=v$cond))))
